{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 343,
  "lineage": "895c10ec-3913-78be-43db-564e869de2e8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cf43e890af9e3351",
            "arn": "arn:aws:ec2:us-east-1:654654353835:instance/i-04780afb4f7274df5",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04780afb4f7274df5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tic_tac_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ce524a976797756d",
            "private_dns": "ip-10-0-1-168.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.168",
            "public_dns": "ec2-3-87-106-80.compute-1.amazonaws.com",
            "public_ip": "3.87.106.80",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f36c6e80cb17318a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08eb10ccde3817012",
            "tags": {
              "Name": "Tic-Tac-Toe"
            },
            "tags_all": {
              "Name": "Tic-Tac-Toe"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-002e9760518f930c4"
            ]
          },
          "dependencies": [
            "aws_security_group.ec2_security_group",
            "aws_subnet.custom_subnet",
            "aws_vpc.custom_vpc",
            "data.aws_ami.amazon_linux_2",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "custom_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654353835:internet-gateway/igw-0773aeb0a51b0a4e0",
            "id": "igw-0773aeb0a51b0a4e0",
            "owner_id": "654654353835",
            "tags": {
              "Name": "custom_igw"
            },
            "tags_all": {
              "Name": "custom_igw"
            },
            "vpc_id": "vpc-062c725c49e63d721"
          },
          "dependencies": [
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "custom_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654353835:route-table/rtb-01b87717a64ffb0fd",
            "id": "rtb-01b87717a64ffb0fd",
            "owner_id": "654654353835",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0773aeb0a51b0a4e0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "custom_route_table"
            },
            "tags_all": {
              "Name": "custom_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-062c725c49e63d721"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.custom_igw",
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-096700f5845d7b229",
            "route_table_id": "rtb-01b87717a64ffb0fd",
            "subnet_id": "subnet-08eb10ccde3817012"
          },
          "dependencies": [
            "aws_internet_gateway.custom_igw",
            "aws_route_table.custom_route_table",
            "aws_subnet.custom_subnet",
            "aws_vpc.custom_vpc",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654353835:security-group/sg-002e9760518f930c4",
            "description": "allow access on ports 80, 22 and 8080",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-002e9760518f930c4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "backend access",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ec2 security group",
            "name_prefix": "",
            "owner_id": "654654353835",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "docker server sg"
            },
            "tags_all": {
              "Name": "docker server sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-062c725c49e63d721"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "custom_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654353835:subnet/subnet-08eb10ccde3817012",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08eb10ccde3817012",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "654654353835",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "custom_subnet"
            },
            "tags_all": {
              "Name": "custom_subnet"
            },
            "vpc_id": "vpc-062c725c49e63d721"
          },
          "dependencies": [
            "aws_vpc.custom_vpc",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "custom_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654353835:vpc/vpc-062c725c49e63d721",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c4ea020e70c5858b",
            "default_route_table_id": "rtb-074eaaeb76e320084",
            "default_security_group_id": "sg-0db421ca4c2fd82f4",
            "dhcp_options_id": "dopt-0d82ee7c41f957176",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-062c725c49e63d721",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-074eaaeb76e320084",
            "owner_id": "654654353835",
            "tags": {
              "Name": "custom_vpc"
            },
            "tags_all": {
              "Name": "custom_vpc"
            }
          }
        }
      ]
    }
  ]
}